# cmake-FindVcvars

./: FindVcvars.cmake  README.md
.github/workflows/: ci.yml
tests/: CMakeLists.txt
